Getting closer to having a working cloud function!

--- a/Good-Eatin/src/app/pages/login/login.component.html
+++ b/Good-Eatin/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
             <div class="login__card">
               <div class="card-block">
 
-                  <form name="userform" method="post" #formCtrl="ngForm">
+                  <form name="userform" method="post" class="inputs" #formCtrl="ngForm">
                     <h3>Login</h3>
                     <h5>{{error}}</h5>
                     <div class="form-group">
