--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -5,9 +5,10 @@
         <a [routerLink]="['/editWeek']" routerLinkActive="router-link-active" >Edit Your Week of Meals</a> 
         <button (click)="runGenerator()">Run Generator</button>
     </div>
-    <div class="week-view">
+    <div class="week-view" *ngFor="let week of weeks; let i = index">
         <div class="day">
             Sunday
+            {{week.sunday.dinner[0].title}}
         </div>
         <div class="day">
             Monday
