--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -7,26 +7,172 @@
     </div>
     <div class="week-view" *ngFor="let week of weeks; let i = index">
         <div class="day">
-            Sunday
-            {{week.sunday.dinner[0].title}}
+            SUNDAY
+            <div class="meal" *ngIf="week.sunday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.sunday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.sunday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.sunday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.sunday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.sunday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Monday
+            MONDAY
+            <div class="meal" *ngIf="week.monday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.monday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.monday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.monday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.monday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.monday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Tuesday
+            TUESDAY
+            <div class="meal" *ngIf="week.tuesday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.tuesday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.tuesday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.tuesday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.tuesday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.tuesday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Wednesday
+            WEDNESDAY
+            <div class="meal" *ngIf="week.wednesday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.wednesday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.wednesday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.wednesday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.wednesday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.wednesday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Thursday
+            THURSDAY
+            <div class="meal" *ngIf="week.thursday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.thursday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.thursday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.thursday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.thursday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.thursday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Friday
+            FRIDAY
+            <div class="meal" *ngIf="week.friday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.friday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.friday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.friday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.friday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.friday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
         <div class="day">
-            Saturday
+            SATURDAY
+            <div class="meal" *ngIf="week.saturday.breakfast.length > 0">
+                Breakfast
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.saturday.breakfast">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.saturday.lunch.length > 0">
+                Lunch
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.saturday.lunch">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
+            <div class="meal" *ngIf="week.saturday.dinner.length > 0">
+                Dinner
+                <div class="recipe-container" (click)="recipeClick(recipe.id)" *ngFor="let recipe of week.saturday.dinner">
+                    {{recipe.title}}
+                    <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
+                </div>
+            </div>
         </div>
     </div>
 </div>
