--- a/Good-Eatin/src/app/components/header/header.component.css
+++ b/Good-Eatin/src/app/components/header/header.component.css
@@ -7,6 +7,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 10px;
   padding-block-end: 10px;
   align-items: flex-center;
