--- a/Good-Eatin/src/app/pages/recipe/recipe.component.css
+++ b/Good-Eatin/src/app/pages/recipe/recipe.component.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: bebasNeue;
+    src: url(https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/fonts%2FBebasNeue%20Regular.otf?alt=media&token=7cd0995f-da9c-4c86-958f-ae97714ba7e0);
+  }
 .recipe img{
     width: 20%;
     margin-left: auto;
@@ -12,4 +16,5 @@
 
 .recipe h2{
     text-align: center;
+    font-family: bebasNeue;
 }
