Started the shopping list page

--- a/Good-Eatin/src/app/pages/shopping-list/shopping-list.component.html
+++ b/Good-Eatin/src/app/pages/shopping-list/shopping-list.component.html
@@ -1,3 +1,25 @@
-<p>
-  shopping-list works!
-</p>
+<h2>Shopping List</h2>
+<!--
+<div class="shoppingList">
+    <select name="singleSelect" ng-model="dateSelect">
+        <option value="{{ingredientList[0].startDate}}">{{format(ingredientList[0].startDate)}}</option>
+        <option value="{{ingredientList[1].startDate}}">{{format(ingredientList[1].startDate)}}</option>
+    </select><br>
+    <div class="week" *ngIf="dateSelect === ingredientList[0].startDate">
+      <div class="unchecked" *ngFor="let ingredient of ingredientList; let i = index">
+        <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === false">
+      </div>
+      <div class="checked" *ngFor="let ingredient of ingredientList; let i = index">
+          <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === true">
+      </div>
+    </div>
+    <div class="Week" *ngIf="dateSelect === ingredientList[1].startDate">
+        <div class="unchecked" *ngFor="let ingredient of ingredientList; let i = index">
+          <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === false">
+        </div>
+        <div class="checked" *ngFor="let ingredient of ingredientList; let i = index">
+            <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === true">
+        </div>
+    </div>
+
+</div> -->
