--- a/Good-Eatin/src/app/pages/shopping-list/shopping-list.component.html
+++ b/Good-Eatin/src/app/pages/shopping-list/shopping-list.component.html
@@ -1,25 +1,26 @@
 <h2>Shopping List</h2>
-<!--
+
 <div class="shoppingList">
-    <select name="singleSelect" ng-model="dateSelect">
+    
+    <select name="singleSelect" (change)="switch()">
         <option value="{{ingredientList[0].startDate}}">{{format(ingredientList[0].startDate)}}</option>
         <option value="{{ingredientList[1].startDate}}">{{format(ingredientList[1].startDate)}}</option>
     </select><br>
-    <div class="week" *ngIf="dateSelect === ingredientList[0].startDate">
-      <div class="unchecked" *ngFor="let ingredient of ingredientList; let i = index">
-        <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === false">
+    <div class="week" *ngIf="week1">
+      <div class="unchecked" *ngFor="let ingredient of ingredientList[0].ingredients; let i = index">
+        <input type="checkbox"  class="pretty p-icon p-rotate" name="ingredient.name: ingredient.amount" ng-model="ingredient.checked" value="true" (change)="checkBox(0,i)" *ngIf="ingredient.checked === false"> {{ingredient.checked ? "" : ingredient.name}}
       </div>
-      <div class="checked" *ngFor="let ingredient of ingredientList; let i = index">
-          <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === true">
+      <div class="checked" *ngFor="let ingredient of ingredientList[0].ingredients; let i = index">
+          <input type="checkbox"  class="pretty p-icon p-rotate" name="ingredient.name: ingredient.amount" (change)="checkBox(0,i)" *ngIf="ingredient.checked === true" checked> {{ingredient.checked ? ingredient.name : ""}}
       </div>
     </div>
-    <div class="Week" *ngIf="dateSelect === ingredientList[1].startDate">
-        <div class="unchecked" *ngFor="let ingredient of ingredientList; let i = index">
-          <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === false">
+    <div class="Week" *ngIf="!week1">
+        <div class="unchecked" *ngFor="let ingredient of ingredientList[1].ingredients; let i = index">
+          <input type="checkbox"  class="pretty p-icon p-rotate" name="ingredient.name: ingredient.amount" (change)="checkBox(1,i)" *ngIf="ingredient.checked === false"> {{ingredient.checked ? "" : ingredient.name}}
         </div>
-        <div class="checked" *ngFor="let ingredient of ingredientList; let i = index">
-            <input type="checkbox" name="ingredient.name: ingredient.amount" *ngIf="ingredient.checked === true">
+        <div class="checked" *ngFor="let ingredient of ingredientList[1].ingredients; let i = index">
+            <input type="checkbox"  class="pretty p-icon p-rotate" name="ingredient.name: ingredient.amount" (change)="checkBox(1,i)" *ngIf="ingredient.checked === true" checked>{{ingredient.checked ? ingredient.name : ""}}
         </div>
     </div>
 
-</div> -->
+</div>
