--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -1,13 +1,12 @@
+<div class="header">
+    <a [routerLink]="['/addRecipe']" routerLinkActive="router-link-active" >Add Recipe</a> 
+    <a [routerLink]="['/editMeals']" routerLinkActive="router-link-active" >Recipes in Generator</a> 
+    <!--<a [routerLink]="['/editWeek']" routerLinkActive="router-link-active" >Edit Your Week of Meals</a> -->
+    <a [routerLink]="['/shoppingList']" routerLinkActive="router-link-active" >Shopping List</a> 
+    <button (click)="runGenerator()">Run Generator</button>
+</div>
 <div class="calendar">
-    <div class="header">
-        <a [routerLink]="['/addRecipe']" routerLinkActive="router-link-active" >Add a Recipe to Generator</a> 
-        <a [routerLink]="['/editMeals']" routerLinkActive="router-link-active" >View Recipes in Generator</a> 
-        <a [routerLink]="['/editWeek']" routerLinkActive="router-link-active" >Edit Your Week of Meals</a> 
-        <br>
-        <button (click)="runGenerator()">Run Generator</button>
-        <a [routerLink]="['/shoppingList']" routerLinkActive="router-link-active" >View Shopping List</a> 
-    </div>
-    
+
     <div class="week-view" *ngFor="let week of weeks; let i = index">
         <h2>{{format(week.startDate)}}</h2> <br>
         <div class="day">
