--- a/Good-Eatin/src/app/pages/landing/landing.component.css
+++ b/Good-Eatin/src/app/pages/landing/landing.component.css
@@ -1,3 +1,20 @@
 .logo{
     width: 400px;
 }
+
+.description {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
+.description p {
+    font-size: 120%;
+}
+.description h2 {
+    width: 100%;
+    align-items: center;
+}
+.description img {
+    max-width: 50%;
+    max-height: 500px;
+}
