--- a/Good-Eatin/src/app/pages/landing/landing.component.html
+++ b/Good-Eatin/src/app/pages/landing/landing.component.html
@@ -12,8 +12,13 @@
   <img width="300" alt="" src="">
 </div>
 <div class="description">
-<h2>Meal plan generator of your deams: </h2>
-<img src="" alt="">
+<h2>The meal plan generator of your dreams </h2>
+<img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Fmeal2.jpg?alt=media&token=2f0df391-9799-440c-ad48-340e225d933b" alt="Meal1">
+<p>Explore tasty recipes with people adding more everyday!</p>
+<img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Fspread2.jpg?alt=media&token=2cdf9c38-8363-4535-82bf-95c6160e7962">
+<p>Create a two-week meal plan by the press of a single button. If you don't like what it selected, hit it again!</p>
+<img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/sitePics%2Fgrocery2.jpg?alt=media&token=70b1b10c-3b27-4598-a6c0-9937160216ee">
+<p>Everytime you generate a meal plan, it will also generate a shopping list for the meals selected!</p>
 </div>
 
 
