--- a/Good-Eatin/src/app/pages/calendar/calendar.component.css
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.css
@@ -6,7 +6,7 @@
 
 .calendar {
     font-family: Helvetica, sans-serif;
-    width: 95%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -34,7 +34,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 90%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     
@@ -45,15 +45,21 @@
   width: 100%;
 }
 .day {
-    width: 10%;
+    flex: 1 1 auto;
     font-size: 150%;
     font-family: bebasNeue;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
+button {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.day div:hover {
+  background-color: lightgray;
+}
 .day img {
-  width: 75%;
+  max-width: 200px;
 }
 
 .meal {
