Addded the email function. Added content to About page. Added the form to Contact page.

--- a/Good-Eatin/src/app/components/footer/footer.component.html
+++ b/Good-Eatin/src/app/components/footer/footer.component.html
@@ -1,6 +1,4 @@
 <div class="footer">
-  <div class="header-right">
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
+    <a [routerLink]="['/contact']" routerLinkActive="router-link-active" >Contact</a>
+    <a [routerLink]="['/about']" routerLinkActive="router-link-active" >About</a>
 </div>
