--- a/Good-Eatin/src/app/pages/about/about.component.html
+++ b/Good-Eatin/src/app/pages/about/about.component.html
@@ -1,3 +1,19 @@
-<p>
-  about works!
-</p>
+<div class="about">
+  <div class="picture">
+    <img src="https://firebasestorage.googleapis.com/v0/b/meal-plan-generator-745c7.appspot.com/o/userPics%2F010-Heather%20and%20Dallin.jpg?alt=media&token=acabcf4e-e7ca-4211-ac71-a47a4730cfff">
+  </div>
+  <div class="story">
+  <h2> The Story of The Creator </h2>
+  <p>
+    Once upon a time, there was a young man trying to get his bachelors degree in software engineering. 
+    He went throughout college, taking many classes, but not many of them had to do with web application development.
+    He was always interested in it, but didn't really have time to spend on trying it out. UNTIL, his senior project came.
+    He was told to make something that he hasn't made before, use technology that he doesn't know about. Thus the meal plan generator was born.
+    From the idea of his brother, he wanted to make something that solved the problem that plagued his family. Coming up with what to have for dinner.
+    Now, his family can spend less time debating and more time enjoying delicous food.
+  </p>
+
+  <h4> Dallin Wrathall </h4>
+  </div>
+</div>
+
