The beginnings of the editing the week.

--- a/Good-Eatin/src/app/pages/calendar/calendar.component.html
+++ b/Good-Eatin/src/app/pages/calendar/calendar.component.html
@@ -32,6 +32,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'sunday')">Edit Day</button>
         </div>
         <div class="day">
             MONDAY
@@ -56,6 +57,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'monday')">Edit Day</button>
         </div>
         <div class="day">
             TUESDAY
@@ -80,6 +82,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'tuesday')">Edit Day</button>
         </div>
         <div class="day">
             WEDNESDAY
@@ -104,6 +107,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'wednesday')">Edit Day</button>
         </div>
         <div class="day">
             THURSDAY
@@ -128,6 +132,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'thursday')">Edit Day</button>
         </div>
         <div class="day">
             FRIDAY
@@ -152,6 +157,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'friday')">Edit Day</button>
         </div>
         <div class="day">
             SATURDAY
@@ -176,6 +182,7 @@
                     <img src="{{recipe.picture}}" alt="{{recipe.title}} Pic">
                 </div>
             </div>
+            <button (click)="sendToEditWeekPage(week.ID, 'saturday')">Edit Day</button>
         </div>
         <hr>
     </div>
